# BotRental

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: Dockerfile  alembic.ini
backend/bot/: ioc.py  middleware.py  run.py
backend/bot/handlers/admins/: filter.py  handlers.py
backend/bot/handlers/users/: handlers.py
backend/src/: config.py  const.py  ioc.py  logger.py  main.py
backend/src/application/services/: auth.py  code.py  jwt.py
backend/src/application/use_cases/user/: auth.py  get_user_referrals.py  get_user_rentals.py  register.py
backend/src/bot/: run.py
backend/src/bot/handlers/users/: main.py
backend/src/configs/grafana/: dashboard.json
backend/src/domain/balance/: exception.py  value_object.py
backend/src/domain/bot/: entity.py  exception.py  value_object.py
backend/src/domain/common/: entity.py  exception.py  value_object.py
backend/src/domain/jwt/: exception.py
backend/src/domain/referral/: entity.py
backend/src/domain/user/: blocked_user.py  entity.py  exception.py  value_object.py
backend/src/infrastructure/broker_messages/rabbitmq/: consumer.py  publisher.py
backend/src/infrastructure/cache/: base.py  redis.py
backend/src/infrastructure/database/: postgresql.py
backend/src/infrastructure/database/migrations/: env.py
backend/src/infrastructure/database/models/: base.py  blocked_users.py  bots.py  referrals.py  telegram_users.py  user.py
backend/src/infrastructure/repositories/bot/: base.py  sqlalchemy.py
backend/src/infrastructure/repositories/referral/: base.py  sqlalchemy.py
backend/src/infrastructure/robokassa/: rb.py
backend/src/infrastructure/taskiq/: broker.py  scheduler.py  tasks.py
backend/src/presentation/controllers/: handler_exception.py
backend/src/presentation/controllers/v1/: auth.py  (+4 more)
backend/src/presentation/decorators/: check_role.py
backend/src/presentation/schemas/: bot.py  error.py  jwt_token.py  monitoring.py  success.py  user.py
docker_compose/: app.yaml  broker.yaml  logs_monitoring.yaml  loki-config.yaml  prometheus.yml  storages.yaml  taskiq_worker.yaml  tg_bot.yaml
docker_compose/grafana/: dashboard.json
(+40 files in other folders)
