[project]
name = "botrental"
version = "0.1.0"
description = ""
authors = [
    {name = "knyazev.maksim2852@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0" 
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "dishka (>=1.5.3,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiormq (>=6.8.1,<7.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "taskiq-aio-pika (>=0.4.2,<0.5.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "taskiq (>=0.11.17,<0.12.0)",
    "taskiq-redis (>=1.0.9,<2.0.0)",
    "robokassa (>=1.0.5,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "ruff (>=0.12.10,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "C4", "ANN"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"